tests/reference/asr-generics_02-e2ea5c9.stderr
semantic error: Simple Type T cannot be intent InOut/Out
 --> tests/../integration_tests/generics_02.py:5:10
  |
5 | def swap(x: InOut[T], y: InOut[T]):
  |          ^^^^^^^^^^^ 
